--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
-numpy
-pandas
-torch
+numpy==1.26.4
+pandas==2.2.3
+torchaudio==2.4.0  
+torchtriton==3.0.0               
+torchvision==0.19.0             
 clip @ git+https://github.com/openai/CLIP.git
 Pillow
-scikit-learn
+scikit-learn==1.2.2
 streamlit
-joblib
+joblib==1.4.2
