--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,8 @@
-python==3.9.21
-numpy==1.26.4
-pandas==2.2.3
-torchaudio==2.4.0  
-torchtriton==3.0.0               
-torchvision==0.19.0             
+numpy
+pandas
+torch            
 clip @ git+https://github.com/openai/CLIP.git
 Pillow
 scikit-learn==1.2.2
 streamlit
-joblib==1.4.2
+joblib
